# core-engine

./: .gitignore  CMakeLists.txt  README.md
build-win-verify/: CMakeCache.txt  Makefile  cmake_install.cmake
common/include/: IAdapter.h  IHardware.h  IIpcServer.h  PacketProcessor.h  PlatformUtils.h  Profiler.h  UsbHardware.h
common/src/: PacketProcessor.cpp  Profiler.cpp  UsbHardware.cpp  main.cpp
docs/: ARCH.md  UBUNTU.md  WINDOWS.md
platform/linux/src/: PlatformLinux.cpp
platform/windows/src/: PlatformWindows.cpp
scripts/: build.ps1  build.sh  run.ps1  run.sh  test-chrome.sh  test_linux.sh  test_windows.ps1
